--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,3 +51,32 @@ tabs-list {
   background-size: cover;
   background-color: var(--bg);
 }
+
+.search-bar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 120px;
+  left: 0;
+  right: 0;
+  background-color: var(--bg);
+}
+
+.search-bar form input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border: 1px solid #181824;
+  border-right: 1px solid #92b3f4;
+  background-color: #1e1e2d;
+  color: #767a8f;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+.search-bar form input::placeholder {
+  color: #767a8f;
+}
